hopefully final version

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -263,7 +263,7 @@ Mechanic.",
   }
   
 @article{alazard,
-  title   = "A minicourse on the low Mach number limit",
+  title   = "A minicourse on the low {M}ach number limit",
   author  = "T. Alazard",
   journal = "Discrete and Continuous Dynamical Systems - Series S",
   volume  = "1",
