--- a/reviews/reviewer-2.tex
+++ b/reviews/reviewer-2.tex
@@ -89,9 +89,9 @@ This has been corrected (we had a BibTeX issue). Thank you.
 \color{blue}
 2. lines 160-163: To justify the study of the low Mach regime, the authors postulate that since the residual of the entropy equation is small (the solution being smooth) then the variations of the entropy with respect to its mean value is also small, so that the denominator in (6a) vanishes. This should be discussed.}
 
-Initially, we considered deriving the limit of the ratio of the entropy residual to the variation of the entropy with respect to its mean value.  It would require a power expansion of each term. We agree that in some cases that would have to be identified, the ratio may admit a finite limit.
+Initially, we considered deriving the limit of the ratio of the entropy residual to the variation of the entropy with respect to its mean value.  It would have required a power series expansion for each term. We agree that, in some cases that would have to be identified, the ratio may admit a finite limit.
 
-However, we noted that a more general formulation could be obtained for the entropy residual so that we have control over the choice of the denominator. It turns out that our expression no longer requires a formula for the entropy function but simply utilizes variables that are typically readily available in a fluid solver (pressure, density, sound speed). We further discuss this in the revised manuscript. 
+However, we noted that a more general formulation could be obtained for the entropy residual so that we have more control over the choice of the denominator. It turns out that our expression no longer requires a formula for the entropy function but simply utilizes variables that are typically readily available in a fluid solver (pressure, density, sound speed). %We further discuss this in the revised manuscript. 
 % We believe the expression we arrived at  and thus over the limit of the ratio in the low-Mach asymptotic limit. 
 \bigskip
 
@@ -101,7 +101,7 @@ However, we noted that a more general formulation could be obtained for the entr
 3. lines 185-188: In eq. (9), it is assumed that $\tilde{R}$ and the entropy residual R vary similarly. It would be nice to go into the details, by explaining, e.g. on the basis of the perfect gas law, how behaves the multiplicative coefficient in (9). 
 }
 
-For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$,  which means that the multiplicative coefficient remains positive and further justifies the use of a normalization parameter of same units as pressure. Also, it is easy to see from the definition of the sound speed, $c^2 = \frac{\partial P}{\partial \rho}_s$, that $\tilde{R} = \frac{DP}{Dt}-c^2 \frac{D\rho}{Dt}$ is zero when the solution remains smooth/isentropic (a new appendix, Appendix C, has been added to that effect). In shock regions, both $\tilde{R}$ and $R$ will be peaked as the density/pressure variables can change rapidly.
+For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$,  which means that the multiplicative coefficient remains positive and further justifies the use of a normalization parameter of same units as pressure. Also, it is easy to see from the definition of the sound speed, $c^2 = \frac{\partial P}{\partial \rho}_s$, that $\tilde{R} = \frac{DP}{Dt}-c^2 \frac{D\rho}{Dt}$ is zero when the solution remains smooth/isentropic (a reference to Appendix C has been added to that effect). In shock regions, both $\tilde{R}$ and $R$ will be peaked as the density/pressure variables can change rapidly.
 \bigskip
 
 
@@ -110,7 +110,7 @@ For instance, using the ideal gas law, one has $\frac{s_e}{P_e} = \frac{C_v}{P}$
 5. The definition of the entropy viscosity is rather complex, since not only based on  the entropy residual as in the native form of the EVM but also on  the "inter-element jump" and so, in the formulation (10) proposed by the authors, on two of these jumps, for the pressure and the density. On the basis of the numerical experiments, it  would be of interest to know which of the 3 terms in the numerator of (10) is really active.  Moreover, rather than essentially repeating in (10b) the eq. (10a), it would be clearer to use the viscosity coefficient in the definition of the diffusion coefficient.
 }
 
-Thank you for pointing this out. We have re-formulated the definition of the viscosity coefficients in (10a) and (10b) to improve readability. We have also commented on when the jump terms are activated (lines 197-199) \tcr{re-check lines numbers once we truly have a final version, after Ray's final comments}.
+Thank you for pointing this out. We have re-formulated the definition of the viscosity coefficients in (10a) and (10b) to improve readability. We have also commented on when the jump terms are activated (lines 205-207).
 \bigskip
 
 
@@ -119,7 +119,7 @@ Thank you for pointing this out. We have re-formulated the definition of the vis
 6. lines 475-476: The fact that the first order viscosity (FOV)  does not give the correct solution is associated to a scaling problem of the dissipative terms. However, the scaling proposed in the paper only acts on the the viscosity associated to the entropy residual and not on its first order upper bound, which is assumed correct by the authors. This should be discussed.
 }
 
-When one inspects the non-dimensionalized equations with the first-order viscosity coefficients, one notes the dissipative terms are ill-scaled since they are multiplied by $\frac{1}{Mach}$. The first-order viscosity (FOV) should only be used in the shock region where it is needed to stabilize the numerical solution. Since in low-Mach situations, the FOV is not expected to be active, we have not adapted the definition of the FOV to low-Mach situations. Our goal in showing FOV-results in Fig. 1 was to emphasize the fact that a FOV-solution may not be correct in low-Mach flows, and thus one should not rely on it as is (as opposed to supersonic situations where using the FOV generally degrades the accuracy of the solution but usually does not lead to a completely erroneous answer). \tcr{Marco/Jean: double check we have such an explanation in the MS}.
+When one inspects the non-dimensionalized equations with the first-order viscosity coefficients, one notes the dissipative terms are ill-scaled since they are multiplied by $\frac{1}{Mach}$. The first-order viscosity (FOV) should only be used in the shock region where it is needed to stabilize the numerical solution. Since in low-Mach situations, the FOV is not expected to be active, we have not adapted the definition of the FOV to low-Mach situations. Our goal in showing FOV-results in Fig. 1 was to emphasize the fact that a FOV-solution may not be correct in low-Mach flows, and thus one should not rely on it as is (as opposed to supersonic situations where using the FOV generally degrades the accuracy of the solution but usually does not lead to a completely erroneous answer).
 \bigskip
 
 
@@ -128,7 +128,8 @@ When one inspects the non-dimensionalized equations with the first-order viscosi
 7. section 6.6: in this example I understand that one focuses on the steady solution. What are then the fluctuations defined in eq. 40 and shown in the graph of Fig. 7?
 }
 
-We changed the term 'fluctuation' to 'variation' to make it clearer and also modified the labels of Fig 7. We are looking at the \emph{steady-state} spatial variations of pressure for different inlet Mach numbers using Eq. 40.
+You are correct, we are looking at the \emph{steady-state} spatial variations of pressure for different inlet Mach numbers using Eq.(40).
+We changed the term 'fluctuation' to 'variation' to make it clearer.  The labels of Fig. 7 have been updated as well. 
 \bigskip
 
 
