--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -1,4 +1,4 @@
- %%
+%%
 %% This is file `elsarticle-template-num.tex',
 %% generated with the docstrip utility.
 %%
@@ -405,8 +405,9 @@ where $\| \cdot \|_\infty$ and $\bar{\cdot}$ denote the L$_\infty$-norm and the 
 computational domain, respectively. The definition of the entropy jump $J[s]$ is spatial discretization-dependent 
 and examples of definitions can be found in \cite{valentin} for discontinuous Galerkin discretization. For 
 continuous finite element methods (FEM), the jump of a given quantity is defined as the change of its normal 
-derivative ($\partial_n ( \cdot ) =  \vec{n} \cdot \grad (\cdot)$) across the common face separating the two elements, and will 
-be further referred to as the inter-element jump. We take the largest value over all faces $f$ present on the 
+derivative ($\partial_n ( \cdot ) =  \vec{n} \cdot \grad (\cdot)$) across the common face separating the two elements
+%, and will be further referred to as the inter-element jump. 
+We take the largest value over all faces $f$ present on the 
 boundary $\partial K$ of element $K$:
 %
 \begin{equation}
@@ -465,7 +466,7 @@ are discussed next. %in \sct{sec:new_ent_prod}.
 
 In this section, the entropy residual $\resi$ is recast as a function of pressure, density, velocity and speed 
 of sound. Then, a low-Mach asymptotic study is carried out for the Euler equations with viscous regularization 
-in order to derive an appropriate normalization parameter that is valid in the isentropic low-Mach regime as well as for 
+in order to derive an appropriate normalization of the residual that is valid in the isentropic low-Mach regime as well as for 
 transonic and supersonic flows. 
 
 %===================================================================================================
@@ -475,7 +476,7 @@ transonic and supersonic flows.
 The first step in defining viscosity coefficients that behave well in the low-Mach limit is to recast 
 the entropy residual in terms of thermodynamic variables. This provides physical insight on possible 
 normalization choices that can be valid in both low-Mach and transonic flows. The alternate definition 
-of the entropy residual, the derivation of which is given in \app{app:ent_res}, is the following: %in \eqt{eq:ent_res}. The derivation that leads to this equation is provided in \app{app:ent_res}. 
+of the entropy residual, whose derivation is given in \app{app:ent_res}, is the following: %in \eqt{eq:ent_res}. The derivation that leads to this equation is provided in \app{app:ent_res}. 
 %
 \begin{equation}
 \label{eq:ent_res}
@@ -519,8 +520,8 @@ J^K( t) = \max_{f\in\partial K}  \max_{ \vec{r}_q \in f}  \Big( \| \vec{u}(\vec{
 The jump operator $J^K$ acts on the same variables that appear in $\resinew$, namely, pressure and density. The residual 
 $\resinew$ and the pressure jump will only contribute to the viscosity coefficients in a shock region. On the other hand, the density jump will contribute in both contact and shock regions. 
 The $\mu$ and $\kappa$ coefficients are kinematic viscosities (units of $m^2/s$); the normalization 
-parameters ``$\norm_P$'' are thus in units of pressure, hence the use of the subscript $P$.  It is emphasized that we are not requiring the same normalization for both $\mu_e$ and $\kappa_e$ so the entropy viscosity 
-coefficients can be different. The low-Mach asymptotic study presented next will determine the proper normalization.
+parameters ``$\norm_P$'' are thus in units of pressure, hence the use of the subscript $P$.  We emphasize that the same normalization is not required for both $\mu_e$ and $\kappa_e$ and thus the entropy viscosity 
+coefficients may be different. The low-Mach asymptotic study presented next will determine the proper normalization.
 
 %===================================================================================================
 \subsection{Asymptotic Study in the Low-Mach Regime} \label{sec:lowMach}
@@ -642,7 +643,7 @@ We begin by expanding each variable in powers of the Mach number. As an example,
 P(\vec{r}, t) = P_0(\vec{r}, t) + P_1(\vec{r}, t) M_\infty + P_2(\vec{r}, t) M_\infty^2 + \dots 
 \end{equation}
 %
-By studying the resulting momentum equations for various powers of $M_\infty$, it is observed that the 
+By studying the resulting momentum equations for various powers of $M_\infty$, we observe that the 
 leading order and first-order pressure terms, $P_0$ and $P_1$, are spatially constant if and only 
 if $\Re_\infty = \Pe_\infty = 1$. In this case, we have
 \begin{subequations}\label{eq:asympt_equ1}
@@ -725,7 +726,7 @@ a step initial condition in the pressure will trigger shock formation, independe
 The non-dimensional form of the Euler equations given in \eqt{eq:Euler_eq2} provides some insight on the 
 dominant terms as a function of the Mach number. This is particular obvious in the momentum equation, \eqt{eq:euler_eq2_mom}, 
 where the gradient of pressure is scaled by $1/M_\infty^2$. In the non-isentropic case, we no longer 
-have $\frac{\grad P}{M_\infty^2}=\grad P_2$ and therefore the pressure gradient term may need to be stabilized by 
+have $\frac{\grad P}{M_\infty^2}=\grad P_2$ and, therefore, the pressure gradient term may need to be stabilized by 
 some dissipative terms of the same scaling so as to prevent spurious oscillations from forming. 
 By inspecting the dissipative terms presents in the the momentum equation, having a dissipative term that 
 scales as $1/M_\infty^2$ leads to the following three options: 
@@ -878,7 +879,7 @@ Here, the variable area is assumed to be a smooth function of space only.
 \end{subequations}
 %
 The application of the entropy viscosity method to the Euler equations with variable area is not 
-fundamentally different to its application to the standard Euler equations. However, we need to 
+fundamentally different from its application to the standard Euler equations. However, we need to 
 derive the associated dissipative terms and verify that the entropy minimum principle is still satisfied.  
 The variable-area Euler equations with viscous regularization are given below; details of the derivation are provided in \app{app:diss_terms}.
 %
@@ -899,7 +900,7 @@ The variable-area Euler equations with viscous regularization are given below; d
 %
 The dissipative terms are quite similar to the ones obtained for the standard Euler equations: each dissipative 
 flux is simply multiplied by the variable area $A$ in order to ensure conservation of the dissipative flux. 
-When assuming a constant area, Eqs.~\ref{eq:euler_visc} are recovered.
+When assuming a constant area, Eqs.~(\ref{eq:euler_visc}) are recovered.
  
 A low-Mach asymptotic limit of the Euler equations with variable area on the same model as in 
 \sct{sec:lowMach} will lead to the divergence constraint $\div (\vec{u} A) = 0$ that can be recast 
@@ -1863,7 +1864,7 @@ of this derivation is to use the chain rule, recalling that the entropy is a fun
 and the density $\rho$, yielding
 %
 \begin{equation*}
-\resi(\vec{r},t) = s_e  \matder{e} + s_{\rho}  \matder{\rho} \,,.
+\resi(\vec{r},t) = s_e  \matder{e} + s_{\rho}  \matder{\rho} \,,
 \end{equation*}
 %
 where $s_e$ denotes the partial derivative of $s$ with respect to the variable $e$. We recall that $\matder{\ }$ 
@@ -1888,10 +1889,10 @@ c^2 := \left. \frac{\partial P}{\partial \rho} \right|_{s=cst} = P_{\rho} - \fra
 Using the following relations (see Appendix A.1 of \cite{jlg})
 %
 \begin{equation*}
-P_e = \frac{1}{e_P} \text{ and } P_{\rho} = -\frac{e_{\rho}}{e_P}  \, .
+P_e = \frac{1}{e_P} \text{ and } P_{\rho} = -\frac{e_{\rho}}{e_P}  \, ,
 \end{equation*}
 %
-Substitution of these expressions into the entropy residual equation above gives \eqt{eq:ent_res}, which is recalled 
+we can substitute these expressions into the entropy residual equation above to yield \eqt{eq:ent_res}, which is recalled 
 below for completeness:
 %
 \begin{equation*}
@@ -1932,11 +1933,10 @@ A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) \geq 0 \, .
 \end{equation}
 %
 The entropy function $s$ satisfies the second law of thermodynamics, $T ds = de - \frac{P}{\rho^2} d \rho$, 
-which implies $s_e := T^{-1}$ and $s_\rho := -P T^{-1} \rho^{-2}$. One can show that \cite{jlg}
+which implies $s_e := T^{-1}$ and $s_\rho := -P T^{-1} \rho^{-2}$ (or, equivalently for the latter, $Ps_e + \rho^2 s_{\rho} = 0$). One can show that \cite{jlg}
 %
 \begin{equation}
-s_e = T^{-1} \geq 0 \text{ and }
-Ps_e + \rho^2 s_{\rho} = 0 \,.
+s_e = T^{-1} \geq 0 \,.
 \end{equation}
 %
 In order to apply the entropy viscosity method to the variable-area Euler equations, dissipative terms need to 
@@ -1944,7 +1944,7 @@ be added to each equation in \eqt{app:euler_variable_A}. The functional forms of
 that the entropy residual derived with these terms present also satisfies the minimum entropy principle. 
 To prove the minimum entropy principle, the extra terms appearing in the entropy residual are either recast as 
 conservative terms or shown to be positive. The rest of this appendix presents this demonstration. 
-Following \cite{jlg}, we first write the variable-area equations with dissipative terms: 
+We first write the variable-area equations with dissipative terms: 
 %
 %
 \begin{subequations}
@@ -1963,7 +1963,7 @@ Following \cite{jlg}, we first write the variable-area equations with dissipativ
 \end{equation}
 \end{subequations}
 %
-where $f$, $g$ and $h$ are dissipative fluxes to be determined. Starting from the modified system of equations 
+where $f$, $g$ and $h$ are dissipative fluxes yet to be determined. Starting from the modified system of equations 
 given in \eqt{app:euler_variable_A_diss}, the entropy residual is derived again. The derivation requires the 
 following steps : express the governing laws in terms of primitive variables $(\rho, \vec{u}, e)$, multiply the 
 continuity equation by $\rho s_\rho$ and the internal energy equation by $s_e$, and invoke multivariate chain 
@@ -1977,14 +1977,14 @@ A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div h +
 \end{equation}
 %
 The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is positive. 
-The right hand-side of \eqt{eq:ent_res_app} can be simplified using the relations $g = A \mu \grad^s \vec{u} + f \otimes \vec{u}$ and $h = \tilde{h} - 0.5 \| \vec{u} \|^2 f$ to give
+The right-hand side of \eqt{eq:ent_res_app} can be simplified using the relations $g = A \mu \grad^s \vec{u} + f \otimes \vec{u}$ and $h = \tilde{h} - 0.5 \| \vec{u} \|^2 f$ to give
 %
 \begin{equation}
 \label{eq:ent_res_app2}
 A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) = s_e \left[ \div \tilde{h}-e \div f \right] + \rho s_{\rho} \div f  + A s_e \mu \grad \vec{u}^s : \grad \vec{u} \,. 
 \end{equation}
 %
-The right hand-side is now integrated by parts:
+The right-hand side is now integrated by parts:
 %
 \begin{multline}
 \label{eq:ent_res_app3}
@@ -1994,7 +1994,7 @@ A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) = \div \left[ s_e \til
 %
 where $\grad^s$ is the symmetric gradient. The term $A s_e \mu \grad^s \vec{u} : \grad \vec{u}$ is positive and thus, 
 does not need any further modification. It %
-remains to treat the other terms of the right hand-side that we now call $rhs$:
+remains to treat the other terms of the right-hand side that we now call $rhs$:
 %
 \begin{equation}
 rhs = \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] - \tilde{h} \cdot \grad s_e  + f \cdot \grad (e s_e) - f \cdot \grad ( \rho s_{\rho} )  \,. \nonumber
@@ -2002,7 +2002,7 @@ rhs = \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] - \tilde{h} \
 %
 The first term in $rhs$ is a conservative term. By carefully choosing a definition for $\tilde{h}$ and $f$, the 
 conservative term can be expressed as a function of the entropy $s$. The inclusion of the variable area in the 
-choice of the dissipative terms is also required so that, when assuming constant area, the standard Euler 
+choice of the dissipative terms is also required so that, when assuming a constant area, the standard Euler 
 equations are recovered. The following definitions for $\tilde{h}$ and $f$ are chosen:
 %
 \begin{equation}
@@ -2030,12 +2030,11 @@ It remains to treat the term $\mathbf{Q}$ that can be recast under a quadratic f
 \end{eqnarray}
 %
 The matrix $\Sigma$ is symmetric and identical to the matrix obtained in \cite{jlg}. The sign of the quadratic form 
-can be simply determined by studying the positiveness of the matrix $\Sigma$. In this particular case, it is required 
-to prove that the matrix is negative definite: the quadratic form is on the right hand-side and is preceded by a negative 
+can be simply determined by studying the positiveness of the matrix $\Sigma$. In this particular case, we have 
+to prove that the matrix is negative definite since the quadratic form is on the right-hand side of the residual expression and it is preceded by a negative 
 sign. According to \cite{jlg}, the convexity of the opposite of the entropy function, i..e, $-s$, with respect to the internal energy $e$ 
 and the specific volume $1/ \rho$ is sufficient to ensure that the matrix $\Sigma$ is negative definite. \\
-Thus, the right hand-side of the entropy residual \eqt{eq:ent_res_app} is now either recast as conservative terms, 
-or known to be positive. Thus, the entropy minimum principle holds.
+Finally, the right-hand side of the entropy residual \eqt{eq:ent_res_app} has now been expressed as the sum of a conservative term and another term known to be positive. Thus, the entropy minimum principle holds.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
@@ -2053,7 +2052,7 @@ here the entropy residual as a function of the pressure, density, velocity, and 
 \end{equation}
 %
 Assuming an isentropic flow, pressure is only a function of density, i.e., $P = f( \rho )$ or equivalently $\rho = f^{-1}( P )$. 
-Using the definition of the speed of sound $c^2 = \left. \frac{\partial P}{\partial \rho} \right)_s$ and the above 
+Using the definition of the speed of sound $c^2 = \left. \frac{\partial P}{\partial \rho} \right|_s$ and the above 
 form of the equation of state, we have
 %
 \begin{equation}\label{eq:app_sp}
